<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vaanilai</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="weather_date">Date</string>
    <string name="weather_condition">Condition</string>
    <string name="weather_city">City</string>
    <string name="weather_temp">Temperature</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="change_city">Change City</string>
    <string name="changing_city">Getting Weather Details</string>
    <string name="title_activity_city_change">CityChangeActivity</string>
	<string name="forecasts">Forecasts</string>
	<string name="change_temp_units">Change to Celsius</string>
</resources>
